force-app/main/default/objects/CuidarnosComLog__c/CuidarnosComLog__c.object-meta.xml
<CustomObject>
    <description>Log de comunicaciones de Comunidad Cuidarnos</description>
    <label>CuidarnosComLog</label>
    <nameField>
        <label>CuidarnosComLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CuidarnosComLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>