force-app/main/default/objects/CuidarnosComLog__c/fields/Citizen_ID__c.field-meta.xml
<CustomField>
    <fullName>Citizen_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Citizen ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CuidarnosComLogs</relationshipLabel>
    <relationshipName>CuidarnosComLogs</relationshipName>
    <type>Lookup</type>
</CustomField>