force-app/main/default/objects/CuidarnosComLog__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Nombre del cliente (Municipio, Provincia, etc)</description>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>