force-app/main/default/objects/CuidarnosComLog__c/fields/Journey_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_Last_Modified_Date__c</fullName>
    <label>Journey Last Modified Date</label>
    <type>DateTime</type>
</CustomField>