force-app/main/default/objects/CuidarnosComLog__c/fields/Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Journey_Status__c</fullName>
    <label>Journey Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>