force-app/main/default/objects/CuidarnosComLog__c/fields/Mail_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Mail_Last_Modified_Date__c</fullName>
    <label>Mail Last Modified Date</label>
    <type>DateTime</type>
</CustomField>