force-app/main/default/objects/CuidarnosComLog__c/fields/Mail_Status__c.field-meta.xml
<CustomField>
    <fullName>Mail_Status__c</fullName>
    <label>Mail Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>