force-app/main/default/objects/CuidarnosComLog__c/fields/Marked_Citizen_Id__c.field-meta.xml
<CustomField>
    <fullName>Marked_Citizen_Id__c</fullName>
    <label>Marked Citizen Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>