force-app/main/default/objects/CuidarnosComLog__c/fields/Marked_Date__c.field-meta.xml
<CustomField>
    <fullName>Marked_Date__c</fullName>
    <label>Marked Date</label>
    <type>DateTime</type>
</CustomField>