force-app/main/default/objects/CuidarnosComLog__c/fields/Related_Citizen_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Related_Citizen_FirstName__c</fullName>
    <formula>Citizen_ID__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Citizen FirstName</label>
    <type>Text</type>
</CustomField>