force-app/main/default/objects/CuidarnosComLog__c/fields/Related_Citizen_LastName__c.field-meta.xml
<CustomField>
    <fullName>Related_Citizen_LastName__c</fullName>
    <formula>Citizen_ID__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Citizen LastName</label>
    <type>Text</type>
</CustomField>