force-app/main/default/objects/CuidarnosComLog__c/fields/Related_Citizen_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Related_Citizen_Mobile__c</fullName>
    <formula>Citizen_ID__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Citizen Mobile</label>
    <type>Text</type>
</CustomField>