force-app/main/default/objects/CuidarnosComLog__c/fields/SMS_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS_Last_Modified_Date__c</fullName>
    <label>SMS Last Modified Date</label>
    <type>DateTime</type>
</CustomField>