force-app/main/default/objects/CuidarnosComLog__c/fields/SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>SMS_Status__c</fullName>
    <description>Estado del envio de un SMS</description>
    <label>SMS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>