force-app/main/default/objects/CuidarnosComLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Usuario Marcador de la comunidad</description>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>