force-app/main/default/objects/CuidarnosComLog__c/fields/User_IP_Addr__c.field-meta.xml
<CustomField>
    <fullName>User_IP_Addr__c</fullName>
    <label>User IP Addr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>