force-app/main/default/objects/CuidarnosComLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogId__c</columns>
    <columns>Citizen_ID__c</columns>
    <columns>Customer__c</columns>
    <columns>User__c</columns>
    <columns>Marked_Date__c</columns>
    <columns>SMS_Status__c</columns>
    <columns>SMS_Last_Modified_Date__c</columns>
    <columns>Related_Citizen_Mobile__c</columns>
    <columns>Related_Citizen_FirstName__c</columns>
    <columns>Related_Citizen_LastName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>